<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.creatingnewapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:fontFamily="@font/amethysta"
            android:gravity="center"
            android:padding="@dimen/header_padding"
            android:text="@string/making_a_new_app"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/making_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/xmlIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/icon_margin_top"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableTop="@drawable/sad_green"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:text="@string/xml"
                    android:textColor="@color/xml_color"
                    android:textSize="@dimen/xml_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/xml_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/score_margin_bottom"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:text="@string/xml_score"
                    android:textColor="@color/xml_color"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_button_margin"
                    android:layout_marginRight="@dimen/small_button_margin"
                    android:background="@drawable/green_gradient"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:onClick="addOneForXML"
                    android:text="@string/using_learned_concept"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_button_margin"
                    android:background="@drawable/green_gradient"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:onClick="addTwoForXML"
                    android:text="@string/trying_new_concept"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/view_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/view_margin_top"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/javaIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/icon_margin_top"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableTop="@drawable/sad_red"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:text="@string/java"
                    android:textColor="@color/java_color"
                    android:textSize="@dimen/xml_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/java_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/score_margin_bottom"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:text="@string/java_score"
                    android:textColor="@color/java_color"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_button_margin"
                    android:layout_marginRight="@dimen/small_button_margin"
                    android:background="@drawable/red_gradient"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:onClick="addOneForJava"
                    android:text="@string/using_learned_concept"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_button_margin"
                    android:background="@drawable/red_gradient"
                    android:fontFamily="@font/amethysta"
                    android:gravity="center"
                    android:onClick="addTwoForJava"
                    android:text="@string/trying_new_concept"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/apply_margin_top"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/amethysta"
            android:onClick="applyThem"
            android:padding="@dimen/big_button_padding"
            android:text="@string/apply_them"
            android:textSize="@dimen/big_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/another_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/small_button_margin"
            android:layout_marginTop="@dimen/give_margin_top"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/amethysta"
            android:onClick="resetScore"
            android:padding="@dimen/big_button_padding"
            android:text="@string/give_it_another_try"
            android:textSize="@dimen/big_button_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>

